// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiImage is rendered 1`] = `
<figure
  class="euiImageWrapper emotion-euiImageWrapper"
>
  <img
    alt="alt"
    aria-label="aria-label"
    class="euiImage testClass1 testClass2 emotion-euiImage-allowFullScreen-l"
    data-test-subj="test subject string"
    src="/cat.jpg"
  />
  <figcaption
    class="emotion-euiImageCaption"
  />
</figure>
`;

exports[`EuiImage is rendered and allows fullscreen 1`] = `
<figure
  class="euiImageWrapper emotion-euiImageWrapper-allowFullScreen"
>
  <button
    aria-label="Open fullscreen alt image"
    class="emotion-euiImageButton"
    data-test-subj="activateFullScreenButton"
    type="button"
  >
    <img
      allowfullscreen=""
      alt="alt"
      aria-label="aria-label"
      class="euiImage testClass1 testClass2 emotion-euiImage-allowFullScreen-l"
      data-test-subj="test subject string"
      src="/cat.jpg"
    />
    <span
      class="emotion-euiImageButton__icon"
      color="ghost"
      data-euiicon-type="fullScreen"
    />
  </button>
  <figcaption
    class="emotion-euiImageCaption"
  />
</figure>
`;

exports[`EuiImage is rendered with a float 1`] = `
<figure
  class="euiImageWrapper emotion-euiImageWrapper-left"
>
  <img
    alt="alt"
    class="euiImage emotion-euiImage-allowFullScreen-original"
    float="left"
    src="/cat.jpg"
  />
  <figcaption
    class="emotion-euiImageCaption"
  />
</figure>
`;

exports[`EuiImage is rendered with a margin 1`] = `
<figure
  class="euiImageWrapper emotion-euiImageWrapper-l"
>
  <img
    alt="alt"
    class="euiImage emotion-euiImage-allowFullScreen-original"
    margin="l"
    src="/cat.jpg"
  />
  <figcaption
    class="emotion-euiImageCaption"
  />
</figure>
`;

exports[`EuiImage is rendered with a node as the caption 1`] = `
<figure
  class="euiImageWrapper emotion-euiImageWrapper"
>
  <img
    alt="alt"
    caption="[object Object]"
    class="euiImage emotion-euiImage-allowFullScreen-original"
    src="/cat.jpg"
  />
  <figcaption
    class="emotion-euiImageCaption"
  >
    <span>
      caption
    </span>
  </figcaption>
</figure>
`;

exports[`EuiImage is rendered with custom size 1`] = `
<figure
  class="euiImageWrapper emotion-euiImageWrapper"
>
  <img
    alt="alt"
    class="euiImage emotion-euiImage-allowFullScreen-customSize"
    src="/cat.jpg"
    style="max-width:50px;max-height:50px"
  />
  <figcaption
    class="emotion-euiImageCaption"
  />
</figure>
`;

exports[`EuiImage is rendered with src 1`] = `
<figure
  class="euiImageWrapper emotion-euiImageWrapper-left"
>
  <img
    alt="alt"
    class="euiImage emotion-euiImage-allowFullScreen-original"
    float="left"
    src="/cat.jpg"
  />
  <figcaption
    class="emotion-euiImageCaption"
  />
</figure>
`;

exports[`EuiImage is rendered with wrapperProps 1`] = `
<figure
  class="euiImageWrapper wrapperProps-className emotion-euiImageWrapper"
  style="border:2px solid red"
>
  <img
    alt="alt"
    caption="[object Object]"
    class="euiImage emotion-euiImage-allowFullScreen-original"
    src="/cat.jpg"
  />
  <figcaption
    class="emotion-euiImageCaption"
  >
    <span>
      caption
    </span>
  </figcaption>
</figure>
`;
